Clean up simple boxed constructors